<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8dp"
    android:padding="@dimen/margin_16dp"
    app:cardCornerRadius="@dimen/margin_4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_8dp">

        <ImageView
            android:id="@+id/iv_app_icon"
            android:layout_width="@dimen/margin_70dp"
            android:layout_height="@dimen/margin_70dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toEndOf="@id/iv_app_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_packag_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toEndOf="@id/iv_app_icon"
            app:layout_constraintStart_toStartOf="@id/tv_app_name"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <TextView
            android:id="@+id/tv_main_activit_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toEndOf="@id/iv_app_icon"
            app:layout_constraintStart_toStartOf="@id/tv_packag_name"
            app:layout_constraintTop_toBottomOf="@id/tv_packag_name" />

        <TextView
            android:id="@+id/tv_version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_code"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toEndOf="@id/iv_app_icon"
            app:layout_constraintStart_toStartOf="@id/tv_main_activit_class"
            app:layout_constraintTop_toBottomOf="@id/tv_main_activit_class" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_name"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintStart_toEndOf="@id/iv_app_icon"
            app:layout_constraintStart_toStartOf="@id/tv_version_code"
            app:layout_constraintTop_toBottomOf="@id/tv_version_code" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

